tests/fail/test_tuple.nim
import ../../protobuf_serialization

discard Protobuf.encode((5, 5))
